--- a/.config
+++ b/.config
@@ -1,1 +1,22 @@
 # This is an empty file, please overwrite it after generating the .config file with the source code
+
+src-git packages_openwrt https://git.openwrt.org/feed/packages.git^c7d1a8c1ae976bd0ad94a351d82ee8fbf16a81f0
+src-git luci_openwrt https://git.openwrt.org/project/luci.git^d6b13f648339273facc07b173546ace459c1cabe
+src-git routing_openwrt https://git.openwrt.org/feed/routing.git^85d040f28c21c116c905aa15a66255dde80336e7
+src-git telephony_openwrt https://git.openwrt.org/feed/telephony.git^2a4541d46199ac96fac214d02c908402831c4dc6
+
+
+src-git packages https://github.com/coolsnowwolf/packages
+#src-git luci https://github.com/coolsnowwolf/luci
+src-git luci https://github.com/coolsnowwolf/luci.git;openwrt-23.05
+src-git routing https://github.com/coolsnowwolf/routing
+src-git telephony https://github.com/coolsnowwolf/telephony.git
+#src-git helloworld https://github.com/fw876/helloworld.git
+#src-git oui https://github.com/zhaojh329/oui.git
+#src-git video https://github.com/openwrt/video.git
+#src-git targets https://github.com/openwrt/targets.git
+#src-git oldpackages http://git.openwrt.org/packages.git
+#src-link custom /usr/src/openwrt/custom-feed
+
+src-git kenzo https://github.com/kenzok8/openwrt-packages
+src-git small https://github.com/kenzok8/small
